[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[lib]
name = "redis_starter_rust"
path = "src/lib.rs"

[[bin]]
name = "redis-starter-rust"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.59"                                   # error handling
bytes = "1.3.0"                                     # helps manage buffers
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking

[dev-dependencies]
tokio-test = "0.4"
portpicker = "0.1"